--- a/styling.css
+++ b/styling.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(50, 50, 50)
+    background-color: rgb(50, 50, 50);
 }
 #name {
     text-align: center;
@@ -7,8 +7,7 @@ body {
     color: white;
     font-family: 'Catamaran', sans-serif;
     margin: auto;
-    padding-top: 25%;
-    
+    padding-top: 15%; 
 }
 #underline {
     border: 1px solid white;
