--- a/styling.css
+++ b/styling.css
@@ -7,21 +7,23 @@ body {
     color: white;
     font-family: 'Catamaran', sans-serif;
     margin: auto;
-    padding-top: 15%; 
+    padding-top: 15%;
+    opacity: 0; 
 }
 #underline {
     border: 1px solid white;
-    width: 1px;
+    width: 0px;
     margin: auto;
-    margin-bottom: 3%;
+    margin-bottom: 40px;
+    opacity: 0;
 }
 .button {
     background-color: gray;
-    width: 9%;
-    padding-top: 0.25%;
-    padding-bottom: 0.25%; 
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 130px;
+    padding-top: 5px;
+    padding-bottom: 5px; 
+    margin-left: 20px;
+    margin-right: 20px;
     color: white;
     font-family: 'Catamaran', sans-serif;
     font-size: 12pt;
